[cucumber-groovy] apply quick-fixes from inspection "SequencedCollection method can be used"
GitOrigin-RevId: 1080eafb7ec4ad81b2b423db0fed06be50d8f049